--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,8 @@ name = "goonmachine"
 version = "0.1.0"
 edition = "2024"
 
+
 [dependencies]
+winit = "0.28"
+pixels = "0.11"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
