--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "RICO-32"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 
 [dependencies]
 winit = "0.28"
-pixels = "0.11"
+pixels = "0.12"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
 image = "0.25.9"
+winapi = { version = "0.3", features = ["winbase"] }
