--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ pixels = "0.12"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
 image = "0.25.9"
 winapi = { version = "0.3", features = ["winbase"] }
+byteorder = "1.5.0"
