--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+macro_procs = { path = "./macro_procs" }
 winit = "0.28"
 pixels = "0.12"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
