--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ pixels = "0.12"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
 winapi = { version = "0.3", features = ["winbase"] }
 byteorder = "1.5.0"
+rayon = "1.11.0"
