Added release ci and cargo toml for cargo release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,13 @@
 name = "rico-32"
 version = "0.1.0"
 edition = "2021"
+description = "A simple VM console with a game engine and scripting language"
+license = "MIT"
+repository = "https://github.com/RICO-32/RICO-32"
 
 
 [dependencies]
-macro_procs = { path = "./macro_procs" }
+macro_procs = { path = "./macro_procs", version = "0.1.0" }
 winit = "0.28"
 pixels = "0.12"
 mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
