--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
 winapi = { version = "0.3", features = ["winbase"] }
 byteorder = "1.5.0"
 rayon = "1.11.0"
+bincode = "2.0.1"
+walkdir = "2.5.0"
