Added console bin that only runs the game and has nothing else for final product

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 description = "A simple VM console with a game engine and scripting language"
 license = "MIT"
 repository = "https://github.com/RICO-32/RICO-32"
+default-run = "rico-32"
 
 
 [dependencies]
